# SYsU-lang

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md  a.O0.ll  a.O3.ll  a.c  a.cpp  a.json  a.ll  a.out  b.c  b.json  b.ll  b.out  build_and_install.sh  clang-E  config.cmake  core  d.c  example.json  example2.json  mytest.sh  test.c
.devcontainer/: Dockerfile  Dockerfile-newlab  devcontainer.json
antlr/: image-install.sh  install.sh
antlr4/: install.sh
compiler/: sysu-compiler
generator/: Asg2Json.cpp  Asg2Json.hpp  Ast2Asg.cpp  C.g4  CMakeLists.txt  EmitIR.cpp  EmitIR.hpp  Generator.cpp  Generator.hpp  InferType.cpp  InferType.hpp  asg.hpp  main.cpp
generator/.antlr/: C.interp  CLexer.interp  CLexer.java  CParser.java
lexer/: CMakeLists.txt  mycat.cpp
llvm/: image-install.sh  install.sh
parser/: Asg2Json.cpp  Asg2Json.hpp  Ast2Asg.cpp  Ast2Asg.hpp  C.g4  CMakeLists.txt  Err.cpp  Err.hpp  InferType.cpp  InferType.hpp  asg.cpp  asg.hpp  main.cpp
parser/.antlr/: C.interp  CLexer.interp  CLexer.java  CParser.java
proving/: CMakeLists.txt  a.out  exam1.c  exam1.cpp  exam1.ll  exam2.c  exam2.cpp  exam2.ll  exam3.c  exam3.cpp  exam3.ll  exam4.c  exam4.ll  exam5.c  exam5.ll  exam6.c  exam6.ll  main.cpp  proving.cpp  test.c  test.cpp  test.ll
task/: CMakeLists.txt
task/1/: CMakeLists.txt  README.md
task/1/antlr/: CMakeLists.txt  SYsU_lang.g4  main.cpp
task/1/flex/: README.md  lex.cpp  lex.hpp  lex.l  main.cpp
task/2/antlr/: Asg2Json.hpp  Ast2Asg.cpp  Ast2Asg.hpp  CMakeLists.txt  InferType.cpp  SYsU_lang.g4  Typing.cpp  asg.hpp  main.cpp
task/2/bison/: lex.cpp  lex.hpp  lex.l  main.cpp  par.cpp  par.hpp  par.y
task/2/common/: Asg2Json.cpp  Typing.hpp
task/3/: Asg2Json.hpp  Ast2Asg.hpp  EmitIR.cpp  EmitIR.hpp  InferType.hpp  Json2Asg.cpp  Json2Asg.hpp  asg.hpp  main.cpp
test/: CMakeLists.txt
test/task0/: CMakeLists.txt  score.py
test/task1/: CMakeLists.txt  answer.sh  score.py
test/task2/: CMakeLists.txt  score.py
test/task3/: CMakeLists.txt  answer.sh  score.py
test/task4/: CMakeLists.txt  answer.sh  score.py
